--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-lazy-load-image-component": "^1.5.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.6",
     "react-typical": "^0.1.3",
     "web-vitals": "^2.1.3"
   },
