--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@heroicons/react": "^1.0.5",
+    "@react-pdf/renderer": "^3.1.13",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -11,6 +12,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-lazy-load-image-component": "^1.5.1",
+    "react-pdf": "^7.5.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.6",
