--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
+    "moment": "^2.30.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-lazy-load-image-component": "^1.5.1",
